# Abalone-Skill-Book

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
docs/: AGENTS.example.md
mcp-server/: Cargo.toml  package-lock.json  package.json
mcp-server/examples/: validate_skills.rs
mcp-server/src/: config.rs  embedding.rs  embedding_cache.rs  feedback.ts  guide.ts  index.ts  lib.rs  main.rs  recommendation.rs  session.rs  session.ts  skill.rs  skills.ts  storage.rs  tools.rs  validation.rs  watcher.rs
mcp-server/test/: integration.test.mjs
plans/: 2026-06-26-agent-skill-runtime-direction-1.0.md  2026-06-26-final-product-design-1.0.md  2026-06-26-recommendation-runtime-implementation-1.0.md
programmer/rust/core/input-validation/: SKILL.md
programmer/rust/programming/error-handling/: SKILL.md
programmer/rust/tauri/permissions/: SKILL.md
skills/accountant/accounting-policies/accounting-estimate-and-change/: SKILL.md
skills/accountant/accounting-policies/error-correction-and-restatement/: SKILL.md
skills/accountant/accounting-policies/policy-selection-and-disclosure/: SKILL.md
skills/accountant/accounting-software/accounting-process-design-and-documentation/: SKILL.md
skills/accountant/accounting-software/accounting-software-selection-and-setup/: SKILL.md
skills/accountant/accounting-software/data-conversion-and-migration/: SKILL.md
skills/accountant/accounting-software/financial-data-security-and-access-management/: SKILL.md
skills/accountant/accounts-payable/ap-ledger-reconciliation/: SKILL.md
skills/translator/: .gitkeep
(+9916 files in other folders)
